# uqpay-sdk-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
tests/: conftest.py  test_auth.py  test_banking.py  test_connect.py  test_issuing.py  test_payment.py  test_simulator.py  test_supporting.py  test_types_base.py  test_types_connect.py  test_webhooks.py
uqpay/: __init__.py  auth.py  client.py  crypto.py  error.py  http.py  idempotency.py  webhooks.py
uqpay/resources/: __init__.py  base.py
uqpay/resources/banking/: __init__.py  balances.py  beneficiaries.py  conversions.py  deposits.py  payment_methods.py  payouts.py  transfers.py  virtual_accounts.py
uqpay/resources/connect/: __init__.py  accounts.py  additional_docs.py  sub_accounts.py
uqpay/resources/issuing/: __init__.py  auth_decision.py  balances.py  cardholders.py  cards.py  products.py  reports.py  transactions.py  transfers.py
uqpay/resources/payment/: __init__.py  attempts.py  balances.py  bank_accounts.py  base.py  intents.py  payouts.py  refunds.py  settlements.py
uqpay/resources/simulator/: __init__.py  deposits.py  issuing.py
uqpay/resources/supporting/: __init__.py  files.py
uqpay/types/: __init__.py  _base.py
uqpay/types/banking/: __init__.py  _check_beneficiary_params.py  _create_beneficiary_params.py  _create_conversion_params.py  _create_payout_params.py  _create_quote_params.py  _create_transfer_params.py  _create_virtual_account_params.py  _list_current_rates_params.py  _list_virtual_accounts_params.py  (+1 more)
(+37 files in other folders)
